# CodeJudge

./: .env.example  .gitignore  AUTH_SETUP.md  AZURE_DEPLOYMENT_MANUAL.md  CNAME  Dockerfile.go-service  README.md  azure-deployment-info.txt  docker-compose.images.yml  docker-compose.microservices.yml.bak  docker-compose.modern.yml  docker-compose.prod.yml  docker-compose.yml  go.work  go.work.sum  index.html  run-terraform.ps1  styles.css
.azure/: plan.copilotmd
.wkt_publish/: index.html
api-gateway/: Dockerfile  go.mod  main.go
auth-service-go/: Dockerfile  go.mod  go.sum  main.go
common/: go.mod
common-go/: go.mod  go.sum
deploy/: azure-deploy.ps1  azure-quick.ps1  azure-simple.ps1  azure-webapp.ps1  azure.ps1  deploy-final.ps1  deploy-to-azure.ps1  local.ps1  seed-db.ps1  seed-db.sh  seed-db.sql
docs/: AZURE.md  AZURE_QUICKSTART.md  AZURE_READY.md  DEPLOYMENT.md  REFACTORING.md  REFACTORING_COMPLETE.md  REFACTOR_GUIDE.md  THEME_UPDATE.md  UI_COMPACT_UPDATE.md  azure-deployment.md  deployment-checklist.md
judge/: CMakeLists.txt  Dockerfile.modern  Dockerfile.simple  main_nossl.cpp  modern_main.cpp  sandbox.cpp  sandbox.h
judge-service/: CMakeLists.txt  Dockerfile  Dockerfile.modern  main.cpp  modern_main.cpp  sandbox.cpp
maintenance-page/: README.md  index.html  styles.css
monolith/: Dockerfile.standalone  go.mod  go.sum  main.go  startup.sh
monolith-service/: Dockerfile  go.mod  main.go
plagiarism-service-go/: Dockerfile  fingerprint.go  go.mod  go.sum  lsh_index.go  main.go
problems-service-go/: Dockerfile  go.mod  go.sum  main.go
(+62 files in other folders)
